<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="application_name">Biometrics</string>
    <string name="biometric_dialog_credential_attempts_before_wipe">Try again. Attempt %1$d of %2$d.</string>
    <string name="biometric_dialog_failed_attempts_now_wiping_device">Too many incorrect attempts. This device’s data will be deleted.</string>
    <string name="biometric_dialog_failed_attempts_now_wiping_profile">Too many incorrect attempts. This work profile and its data will be deleted.</string>
    <string name="biometric_dialog_failed_attempts_now_wiping_user">Too many incorrect attempts. This user will be deleted.</string>
    <string name="biometric_dialog_last_attempt_before_wipe_dialog_title">Your data will be deleted</string>
    <string name="biometric_dialog_last_password_attempt_before_wipe_device">If you enter an incorrect password on the next attempt, this device’s data will be deleted.</string>
    <string name="biometric_dialog_last_password_attempt_before_wipe_profile">If you enter an incorrect password on the next attempt, your work profile and its data will be deleted.</string>
    <string name="biometric_dialog_last_password_attempt_before_wipe_user">If you enter an incorrect password on the next attempt, this user will be deleted.</string>
    <string name="biometric_dialog_last_pattern_attempt_before_wipe_device">If you enter an incorrect pattern on the next attempt, this device’s data will be deleted.</string>
    <string name="biometric_dialog_last_pattern_attempt_before_wipe_profile">If you enter an incorrect pattern on the next attempt, your work profile and its data will be deleted.</string>
    <string name="biometric_dialog_last_pattern_attempt_before_wipe_user">If you enter an incorrect pattern on the next attempt, this user will be deleted.</string>
    <string name="biometric_dialog_last_pin_attempt_before_wipe_device">If you enter an incorrect PIN on the next attempt, this device’s data will be deleted.</string>
    <string name="biometric_dialog_last_pin_attempt_before_wipe_profile">If you enter an incorrect PIN on the next attempt, your work profile and its data will be deleted.</string>
    <string name="biometric_dialog_last_pin_attempt_before_wipe_user">If you enter an incorrect PIN on the next attempt, this user will be deleted.</string>
    <string name="biometric_dialog_now_wiping_dialog_dismiss">Dismiss</string>
    <string name="biometric_dialog_use_password">Use password</string>
    <string name="biometric_dialog_use_pattern">Use pattern</string>
    <string name="biometric_dialog_use_pin">Use PIN</string>
    <string name="biometric_prompt_button_face">Face</string>
    <string name="biometric_prompt_button_fingerprint">Fingerprint</string>
    <string name="biometric_prompt_button_voice_face">face recognition</string>
    <string name="biometric_prompt_button_voice_fingerprint">fingerprints</string>
    <string name="biometric_prompt_button_voice_iris">iris recognition</string>
    <string name="biometric_prompt_button_voice_scan">Intelligent Scan</string>
    <string name="biometric_prompt_confirmed_description_text">Verified. Tap confirm to continue.</string>
    <string name="biometric_prompt_default_cancel">Cancel</string>
    <string name="biometric_prompt_default_continue">Continue</string>
    <string name="biometric_prompt_default_title">Verify your identity</string>
    <string name="biometric_prompt_default_title_work_profile">Work</string>
    <string name="biometric_prompt_open_phone_try_again">Open phone and try again.</string>
    <string name="biometric_prompt_positive_confirm">Confirm</string>
    <string name="biometric_prompt_postive_retry">Retry</string>
    <string name="biometric_prompt_unlock_password">Enter your current password.</string>
    <string name="biometric_prompt_unlock_pattern">Draw your unlock pattern.</string>
    <string name="biometric_prompt_unlock_pin">Enter your current PIN.</string>
    <string name="biometrics_dex_toast">Use your biometrics on your tablet to verify your identity.</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_access_turn_on_button">Turn on</string>
    <string name="camera_access_turn_on_message">To use the camera, you need to turn on Camera access.</string>
    <string name="camera_access_turn_on_title">Turn on Camera access?</string>
    <string name="cancel">Cancel</string>
    <string name="common_select_continue_button">Select continue button to continue.</string>
    <string name="confirm_puk">Confirm PUK</string>
    <string name="confirm_ucm_your_pin_header">Enter your current PIN.</string>
    <string name="cryptkeeper_wrong_password">Incorrect password entered</string>
    <string name="cryptkeeper_wrong_pattern">Incorrect pattern drawn</string>
    <string name="cryptkeeper_wrong_pin">Incorrect PIN entered</string>
    <string name="draw_unlock_pattern">Draw unlock pattern</string>
    <string name="face_auth_fail">No match</string>
    <string name="face_biometric_prompt_identify_failure_title">Face doesn\'t match</string>
    <string name="face_dex_guide_text">Look here</string>
    <string name="face_dex_standalone_block_register">Switch to tablet mode to register your face.</string>
    <string name="face_dex_toast">Use face recognition on your tablet to verify your identity.</string>
    <string name="face_doesnt_support_multi_window_text">This app does not support Multi window.</string>
    <string name="face_enroll_back_key_toast">Tap the Back button again to stop registering your face.</string>
    <string name="face_enroll_cancel">Face registration canceled.</string>
    <string name="face_enroll_completed">Face registered.</string>
    <string name="face_enroll_error_button_ok">OK</string>
    <string name="face_enroll_error_folder_open">Open flip phone to use Face recognition.</string>
    <string name="face_enroll_error_title">Couldn\'t register face</string>
    <string name="face_enroll_guide_bottom_continue">Continue</string>
    <string name="face_enroll_percent_format_text">^1%</string>
    <string name="face_enroll_sidesync_toast">Register your face on your phone.</string>
    <string name="face_error_message_no_space">@string/fingerprint_error_message_no_space</string>
    <string name="face_error_title_no_space">@string/fingerprint_error_title_no_space</string>
    <string name="face_error_unable_to_process">If this keeps happening, restart your phone.</string>
    <string name="face_error_unable_to_process_popup_title">Face recognition not working</string>
    <string name="face_error_unable_to_process_tablet">If this keeps happening, restart your tablet.</string>
    <string name="face_glass_check_label_text">Glasses check</string>
    <string name="face_guide_check_wearing_glasses">Do you wear glasses?</string>
    <string name="face_guide_check_wearing_glasses_no">No</string>
    <string name="face_guide_check_wearing_glasses_text">If you do, put them on now so you can register your face both with glasses and without them.</string>
    <string name="face_guide_check_wearing_glasses_yes">Yes</string>
    <string name="face_guide_register_additional_description">Position your face in the area shown on the screen.</string>
    <string name="face_guide_register_clearly_visible">Make sure your face is clearly visible</string>
    <string name="face_guide_register_description">Your tablet should be at eye level, %1$d to %2$d inches from your face.</string>
    <string name="face_guide_register_description_cm">Your tablet should be at eye level, %1$d to %2$d cm from your face.</string>
    <string name="face_guide_register_description_cm_tts">Your tablet should be at eye level, %1$d to %2$d centimeters from your face.</string>
    <string name="face_guide_register_low_quality">The front camera may be dirty. Try cleaning it.</string>
    <string name="face_guide_register_not_recognized">Face not recognized</string>
    <string name="face_guide_register_remove_anything">Remove anything that may be covering your face, such as a mask or dark glasses.</string>
    <string name="face_guide_register_too_dark">Try turning on a light or going somewhere brighter.</string>
    <string name="face_guide_wearing_glasses_text">Take off your glasses to continue.</string>
    <string name="face_misaligned_to_bottom">Move face up.</string>
    <string name="face_misaligned_to_left">Move face to the right.</string>
    <string name="face_misaligned_to_lower_left">Move face up and to the right.</string>
    <string name="face_misaligned_to_lower_right">Move face up and to the left.</string>
    <string name="face_misaligned_to_right">Move face to the left.</string>
    <string name="face_misaligned_to_top">Move face down.</string>
    <string name="face_misaligned_to_upper_left">Move face down and to the right.</string>
    <string name="fingerprint_enroll_guide">Press your finger inside the circle. Lift it when the circle is fully highlighted, then press again.</string>
    <string name="fingerprint_enroll_setup_guide">To get the best scan, press with the pad of your finger inside the circle, then lift it when the circle is fully highlighted. Repeat until you reach 100%.</string>
    <string name="fingerprint_enroll_setup_guide2">Note that the location of the circle will move a little each time.</string>
    <string name="fingerprint_register_add">Add</string>
    <string name="fingerprint_register_done">Done</string>
    <string name="fingerprint_setup_register_btn">Register</string>
    <string name="fingerprint_verification_description_default_text">Scan your fingerprint.</string>
    <string name="next_button_label">Next</string>
</resources>