<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?android:attr/windowBackground"
    android:paddingTop="@dimen/sec_fingerprint_register_frame_marginTop"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image_knox_bi"
        android:visibility="invisible"
        android:layout_width="@dimen/biometric_prompt_knox_logo_width"
        android:layout_height="@dimen/biometric_prompt_knox_logo_height"
        android:layout_marginBottom="@dimen/biometric_prompt_knox_logo_bottom_margin"
        android:src="@drawable/bi_knox_secured"
        android:tint="@color/sec_fingerprint_enroll_knox_bi_color"
        android:layout_alignParentBottom="true"
        android:alpha="@dimen/sec_fingerprint_enroll_knox_bi_alpha"
        android:layout_marginEnd="@dimen/biometric_prompt_knox_logo_end_margin"
        android:layout_alignParentEnd="true"/>
    <RelativeLayout
        android:id="@+id/register_screen"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="24dp">
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/register_enroll_vi_frame"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp">
            <com.samsung.android.biometrics.app.setting.fingerprint.enroll.FingerprintProgressEffectView
                android:id="@+id/finger_view"
                android:layout_width="114dp"
                android:layout_height="126dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/register_guide_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:importantForAccessibility="noHideDescendants">
            <View
                android:id="@+id/register_guide_top_margin_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@dimen/sec_fingerprint_enroll_1st_layout_ratio"/>
            <ScrollView
                android:id="@+id/register_guide_text_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@dimen/sec_fingerprint_enroll_2nd_layout_ratio">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/sec_fingerprint_register_guideText_size"
                        android:textColor="#eaeaeb"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/register_guide_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fingerprint_enroll_guide"
                        android:lineSpacingExtra="4dp"
                        android:fontFamily="sec"
                        android:textFontWeight="300"/>
                </LinearLayout>
            </ScrollView>
            <TextView
                android:textSize="@dimen/sec_fingerprint_enroll_progress_textSize"
                android:layout_gravity="center"
                android:id="@+id/progress_text"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="@dimen/sec_fingerprint_enroll_3rd_layout_ratio"
                android:importantForAccessibility="no"
                style="@style/ProgressTextStyle"/>
            <View
                android:id="@+id/finger_area_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@dimen/sec_fingerprint_enroll_4th_layout_ratio"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/add_done_button_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/add_button"
                    android:layout_width="match_parent"
                    android:text="@string/fingerprint_register_add"
                    android:layout_centerInParent="true"
                    style="@style/SecFingerprintBottomBarStyle"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:text="@string/fingerprint_register_done"
                    android:layout_centerInParent="true"
                    style="@style/SecFingerprintBottomBarStyle"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/done_button_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sec_fingerprint_register_bottom_bar_height"
            android:weightSum="1"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/done2_button"
                android:text="@string/fingerprint_register_done"
                style="@style/SecFingerprintBottomBarStyle"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/add_button_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_above="@+id/next_button_area">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/add2_button"
                android:background="@drawable/sec_fingerprint_contained_button_background"
                android:layout_width="0dp"
                android:text="@string/fingerprint_register_add"
                android:layout_weight="2"
                android:layout_centerHorizontal="true"
                style="@style/SecFingerprintRaisedButtonStyle"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <RelativeLayout
            android:gravity="center_vertical"
            android:id="@+id/next_button_area"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sec_fingerprint_register_suw_button_layout_height"
            android:layout_alignParentBottom="true">
            <Button
                android:textSize="@dimen/biometrics_common_suw_bottom_next_button_text_size"
                android:id="@+id/next_text_btn"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/next_button_label"
                android:layout_alignParentEnd="true"
                style="@style/SecFingerprintSuwNextButtonStyle"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/first_guide_screen"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/register_first_guide_vi_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp">
            <TextureView
                android:id="@+id/register_popup_img_first"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_above="@+id/register_button_layout"
            android:layout_below="@+id/register_first_guide_vi_layout"
            android:layout_marginHorizontal="24dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:ellipsize="end"
                        android:id="@+id/first_guide_title"
                        android:text="@string/fingerprint_enroll_setup_guide"
                        style="@style/SecFingerprintFirstGuideStyle"/>
                    <TextView
                        android:id="@+id/register_text_first"
                        android:layout_marginTop="@dimen/sec_fingerprint_register_guideText_marginTop"
                        android:text="@string/fingerprint_enroll_setup_guide2"
                        android:layout_below="@+id/first_guide_title"
                        style="@style/SecFingerprintFirstGuideStyle"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/register_button_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sec_fingerprint_register_bottom_bar_height"
            android:layout_marginBottom="44dp"
            android:weightSum="1"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/register_button"
                android:text="@string/fingerprint_setup_register_btn"
                style="@style/SecFingerprintRaisedButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
