<?xml version="1.0" encoding="utf-8"?>
<com.samsung.android.biometrics.app.setting.credential.AuthCredentialPatternCoverView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:background="@drawable/sem_biometric_prompt_dialog_cover_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview_content"
            android:scrollbars="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:fadeScrollbars="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toTopOf="@+id/lockPattern"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/auth_dialog_lock"
                    app:layout_constraintBottom_toTopOf="@+id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:gravity="center"
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/biometric_prompt_default_title"
                    app:layout_constraintBottom_toTopOf="@+id/subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon"
                    style="@style/TextAppearance.Biometrics.AuthCredential.TitleOnCover"/>
                <TextView
                    android:gravity="center"
                    android:id="@+id/subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    style="@style/TextAppearance.Biometrics.AuthCredential.SubTitleOnCover"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/fingerprint_verification_description_default_text"
                    app:layout_constraintBottom_toTopOf="@+id/error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle"
                    style="@style/TextAppearance.Biometrics.AuthCredential.BodyOnCover"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/error"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/biometric_prompt_unlock_pattern"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    style="@style/TextAppearance.Biometrics.AuthCredential.GuideOnCover"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <com.android.internal.widget.LockPatternView
            android:layout_gravity="center"
            android:id="@+id/lockPattern"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_layout"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollview_content"
            app:layout_constraintWidth_max="wrap"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_layout"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lockPattern"
            app:layout_constraintVertical_bias="1">
            <com.samsung.android.biometrics.app.setting.credential.AuthCredentialBottomBarButton
                android:id="@+id/btn_cancel"
                android:visibility="gone"
                android:layout_width="0dp"
                android:text="@string/biometric_prompt_default_cancel"
                android:paddingHorizontal="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_continue"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                style="@style/AuthCredentialStyle.ButtonOnCover"/>
            <com.samsung.android.biometrics.app.setting.credential.AuthCredentialBottomBarButton
                android:enabled="false"
                android:id="@+id/btn_continue"
                android:visibility="gone"
                android:layout_width="0dp"
                android:text="@string/biometric_prompt_default_continue"
                android:paddingHorizontal="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                style="@style/AuthCredentialStyle.ButtonOnCover"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.samsung.android.biometrics.app.setting.credential.AuthCredentialPatternCoverView>
